--- a/chat box/chat_box.html
+++ b/chat box/chat_box.html
@@ -14,7 +14,7 @@
 <body>
     <div class="head">
         <div class="dec top"></div>
-        <span id="s"> Chat Box </span>
+        <span id="s"> Va3i assistant </span>
         <div class="dec bottom"></div>
     </div>
     <div class="bod">
